<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.yoo.wouldu.viewmodel.RequestViewModel" />

        <variable
            name="item"
            type="com.yoo.wouldu.model.data.request.Request" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/all_btn_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/shape_rad20_gray_left"
                android:onClick="@{() -> viewModel.loadAll()}"
                android:stateListAnimator="@null"
                android:text="@string/category_all"
                android:textSize="12dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/do_btn_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/shape_rad20_gray_middle"
                android:onClick="@{() -> viewModel.loadDoCategory()}"
                android:stateListAnimator="@null"
                android:text="@string/category_do"
                android:textSize="12dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buy_btn_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/shape_rad20_gray_middle"
                android:onClick="@{() -> viewModel.loadBuyCategory()}"
                android:stateListAnimator="@null"
                android:text="@string/category_buy"
                android:textSize="12dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/lend_btn_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/shape_rad20_gray_right"
                android:onClick="@{() -> viewModel.loadLendCategory()}"
                android:stateListAnimator="@null"
                android:text="@string/category_lend"
                android:textSize="12dp" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/requestlist_rv_home"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/add_btn_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="Button"
            android:onClick="@{() -> viewModel.addNewTask(0)}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>