<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="24dp"
    android:layout_marginRight="24dp"
    android:layout_marginBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingTop="20dp"
    android:paddingRight="16dp"
    android:paddingBottom="20dp">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="0dp"
        android:layout_height="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/shape_rad10_block" />

    <ImageView
        android:id="@+id/imageView21"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:srcCompat="@drawable/shape_rad10_block" />

    <ImageView
        android:id="@+id/imageView22"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="@+id/imageView21"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageView21"
        app:layout_constraintTop_toBottomOf="@+id/imageView21"
        app:srcCompat="@drawable/shape_rad10_block" />

    <ImageView
        android:id="@+id/imageView25"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginStart="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView21"
        app:layout_constraintStart_toStartOf="@+id/imageView21"
        app:srcCompat="@drawable/aline_buy_detail" />

    <ImageView
        android:id="@+id/imageView26"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginStart="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:srcCompat="@drawable/aline_do_detail" />

    <ImageView
        android:id="@+id/imageView27"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginStart="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView22"
        app:layout_constraintStart_toStartOf="@+id/imageView22"
        app:srcCompat="@drawable/aline_lend_detail" />

    <TextView
        android:id="@+id/textView5"
        style="@style/titleBold02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category_do"
        android:textColor="@color/caption02"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintStart_toEndOf="@+id/imageView26"
        app:layout_constraintTop_toTopOf="@+id/imageView3" />

    <TextView
        android:id="@+id/textView6"
        style="@style/titleBold02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category_buy"
        android:textColor="@color/caption02"
        app:layout_constraintBottom_toBottomOf="@+id/imageView21"
        app:layout_constraintStart_toEndOf="@+id/imageView25"
        app:layout_constraintTop_toTopOf="@+id/imageView21" />

    <TextView
        android:id="@+id/textView7"
        style="@style/titleBold02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category_lend"
        android:textColor="@color/caption02"
        app:layout_constraintBottom_toBottomOf="@+id/imageView22"
        app:layout_constraintStart_toEndOf="@+id/imageView27"
        app:layout_constraintTop_toTopOf="@+id/imageView22" />

</androidx.constraintlayout.widget.ConstraintLayout>